force-app/main/default/objects/Practice_Studio_Setting__mdt/Practice_Studio_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Practice Studio Setting</label>
    <pluralLabel>Practice Studio Settings</pluralLabel>
</CustomObject>