force-app/main/default/objects/Practice_Studio_Setting__mdt/fields/Algorithm_Name__c.field-meta.xml
<CustomField>
    <fullName>Algorithm_Name__c</fullName>
    <label>Algorithm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>